fix: collapse from nursing

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -116,4 +116,7 @@ textarea.custom-input{
     background-color: #23272b;
 }
 
-
+/* Bootstrap */
+.mt-5{
+    margin-top: 3rem;
+}
